--- a/ocmoni7/jsp/validate.html
+++ b/ocmoni7/jsp/validate.html
@@ -95,7 +95,7 @@
                             <input name="salesDate" id="salesDate" ng-model="data.salesDate"  type="text"
                                    datetimepicker="" class="form-control input-sm "/>
                         </div>
-                        <label for="salesDate" class="glyphicon glyphicon-th iconfont_box"></label>
+                        <label for="salesDate" class="glyphicon glyphicon-calendar iconfont_box"></label>
                     </div>
 
                     <div class="form-group">
@@ -172,18 +172,18 @@
                         <label  class="pure-u-1-8 control-label">起飞时间</label>
                         <div class="pure-u-1-4">
                             <input name="departureDateTime" id="departureDateTime" ng-model="data.departureDateTime" datetimepicker=""
-                                   class="form-control input-sm" type="text" readonly="readonly"  />
+                                   class="form-control input-sm" type="text" />
                         </div>
-                        <label for="departureDateTime" class="glyphicon glyphicon-th iconfont_box"></label>
+                        <label for="departureDateTime" class="glyphicon glyphicon-calendar iconfont_box"></label>
                     </div>
 
                     <div class="form-group">
                         <label  class="pure-u-1-8 control-label">到达时间</label>
                         <div class="pure-u-1-4">
                             <input name="arrivalDateTime" id="arrivalDateTime" ng-model="data.arrivalDateTime" datetimepicker=""
-                                   class="form-control input-sm" type="text"   />
+                                   class="form-control input-sm" type="text" />
                         </div>
-                        <label for="arrivalDateTime" class="glyphicon glyphicon-th iconfont_box"></label>
+                        <label for="arrivalDateTime" class="glyphicon glyphicon-calendar iconfont_box"></label>
                     </div>
 
                     <div class="form-group">
@@ -602,7 +602,7 @@ s                    </div>
 
 
 <script type="text/javascript" src="${pageContext.request.contextPath}/resources/oc/components/jquery/jquery.js"></script>
-<script type="text/javascript" src="${pageContext.request.contextPath}/resources/oc/components/angular/angular.js"></script>
+<script type="text/javascript" src="${pageContext.request.contextPath}/resources/oc/components/angular/angular.min.js"></script>
 <script type="text/javascript" src="${pageContext.request.contextPath}/resources/oc/dist/validate.js"></script>
 </body>
 </html>
