--- a/ocmoni7/jsp/datasourceEdit.html
+++ b/ocmoni7/jsp/datasourceEdit.html
@@ -18,8 +18,8 @@
         .ng-dirty.ng-invalid ~ span.ko{color:red; display:inline;}
     </style>
 </head>
-<body ng-controller = "EditController">
-<div growl =""></div>
+<body ng-controller = "EditController" ng-cloak="">
+
 
 <input type= "hidden" id="carrCode"   value='${sessionScope.carrCode}'/>
 <input type= "hidden" id = "action" name = "action" value = "${action}">
@@ -68,6 +68,7 @@
 
 <!--主编辑区域 start-->
 <div class="container-fluid main_content" >
+	<div growl =""></div>
     <form class="form-horizontal" id = "myForm" name ="myForm">
     <div class="data_section ">
         <div class="title_layout">
@@ -82,6 +83,7 @@
                             datepicker=""    ng-required="true"  dateoc =""  btc=""  class="form-control"   type="text" placeholder="生效日期"  />
                     </div>
                     <label for="effDate" class="glyphicon glyphicon-calendar iconfont_box"></label>
+                    <span class ="table_control"><i class ="glyphicon glyphicon-asterisk red"></i></span>
                     <span ng-messages="myForm.effDate.$error" ng-if="myForm.effDate.$dirty">
                         <span class="errorInfo_validate" ng-message="required">必填字段。</span>
                         <span class="errorInfo_validate" ng-message="dateoc">请输入合法的日期yyyy-mm-dd。</span>
@@ -149,6 +151,7 @@
                                 name ="internationalTag" type="radio" value="I"  radio-required =""  /><label for="internationalTag2">国际</label>
                         </span>
                     </div>
+                    <span class ="table_control"><i class ="glyphicon glyphicon-asterisk red"></i></span>
                     <span ng-messages="myForm.internationalTag.$error" ng-if="myForm.internationalTag.$dirty" >
                          <span class="errorInfo_validate" ng-message="radioRequired">必填字段。</span>
                     </span>
@@ -168,6 +171,10 @@
                             <label for="dataSource2">航信数据</label>
                         </span>
                     </div>
+                    <span class ="table_control"><i class ="glyphicon glyphicon-asterisk red"></i></span>
+                    <span ng-messages="myForm.dataSource.$error"  ng-if="myForm.dataSource.$dirty">
+                        <span class="errorInfo_validate" ng-message="radioRequired">必填字段。</span>
+                    </span>
                 </div>
 
                 <div class="form-group">
