--- a/ocmoni6/html/datasourceEdit.html
+++ b/ocmoni6/html/datasourceEdit.html
@@ -46,8 +46,8 @@
         <span class="query_title">新建数据源配置</span>
         <span> 配置项</span>
         <span class="pull-right marginR15" style="padding-top: 2px">
-            <button type="submit" id ="back" class="btn btn-sm btn-default">返回</button>
-            <button type="submit" id ="saveBtn" class="btn btn-success btn-sm">保存</button>
+            <button type="button" id ="back" class="btn btn-sm btn-default">返回</button>
+            <button type="button" id ="saveBtn" class="btn btn-success btn-sm">保存</button>
         </span>
     </div>
     <!--query section end-->
