--- a/ocmoni6/html/mileageExchangeQuery.html
+++ b/ocmoni6/html/mileageExchangeQuery.html
@@ -47,10 +47,10 @@
                 <span class="marginL10"></span>
 
                 <span class="pull-right marginR15">
-                    <button type="submit" class="btn btn-sm btn-default">返回</button>
-                    <button type="submit" class="btn btn-sm btn-warning">截止</button>
-                    <button type="submit" class="btn btn-sm btn-success">新建</button>
-                    <button type="submit" class="btn btn-sm bg-primary">查询</button>
+                    <button type="button" class="btn btn-sm btn-default">返回</button>
+                    <button type="button" class="btn btn-sm btn-warning">截止</button>
+                    <button type="button" class="btn btn-sm btn-success">新建</button>
+                    <button type="button" class="btn btn-sm bg-primary">查询</button>
                 </span>
             </div>
             <!--query row1 end-->
