--- a/ocmoni6/html/s7Edit.html
+++ b/ocmoni6/html/s7Edit.html
@@ -48,8 +48,8 @@
         <span>费用&nbsp;|</span>
         <span>规则</span>
         <span class="pull-right marginR15" style="padding-top: 2px">
-            <button type="submit" id ="saveBtn" class="btn btn-default btn-sm">保存</button>
-            <button type="submit" id ="saveAndPublishBtn" class="btn btn-default btn-sm btn-success">保存并发布</button>
+            <button type="button" id ="saveBtn" class="btn btn-default btn-sm">保存</button>
+            <button type="button" id ="saveAndPublishBtn" class="btn btn-default btn-sm btn-success">保存并发布</button>
         </span>
     </div>
     <!--query section end-->
