--- a/ocmoni6/html/validate.html
+++ b/ocmoni6/html/validate.html
@@ -45,9 +45,9 @@
     <div class ="query_section">
         <span class="query_title">已发布运价验证</span>
         <span class="pull-right marginR15" style="padding-top: 2px">
-            <button type="submit" id ="backBtn" class="btn btn-sm btn-default">返回</button>
-            <button type="submit" id ="cleanBtn" class="btn btn-warning btn-sm">清空</button>
-            <button type="submit" id ="vaildateBtn" class="btn btn-success btn-sm">验证请求</button>
+            <button type="button" id ="backBtn" class="btn btn-sm btn-default">返回</button>
+            <button type="button" id ="cleanBtn" class="btn btn-warning btn-sm">清空</button>
+            <button type="button" id ="vaildateBtn" class="btn btn-success btn-sm">验证请求</button>
         </span>
     </div>
     <!--query section end-->
