--- a/ocmoni6/html/datasourceQuery.html
+++ b/ocmoni6/html/datasourceQuery.html
@@ -84,8 +84,8 @@
                 </div>
 
                 <span class="pull-right marginR15">
-                    <button type="submit" class="btn btn-sm btn-primary">查询</button>
-                    <button type="submit" class="btn btn-sm btn-success">新建</button>
+                    <button type="button" class="btn btn-sm btn-primary">查询</button>
+                    <button type="button" class="btn btn-sm btn-success">新建</button>
                 </span>
             </div>
             <!--query row1 end-->
