--- a/ocmoni7/jsp/oc_common.html
+++ b/ocmoni7/jsp/oc_common.html
@@ -8,3 +8,4 @@
 <link type="text/css" rel="stylesheet" href="${pageContext.request.contextPath}/resources/oc/components/iconfont/iconfont.css"/>
  -->
 <link type="text/css" rel="stylesheet" href="${pageContext.request.contextPath}/resources/oc/dist/commonStyle.css"/>
+<script type="text/javascript" src="${pageContext.request.contextPath}/resources/oc/components/jquery/jquery.js"></script>
