--- a/ocmoni6/html/s7Query.html
+++ b/ocmoni6/html/s7Query.html
@@ -29,10 +29,17 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="#">附加服务</a></li>
-                    <li><a href="#">数据源配置</a></li>
-                    <li><a href="#">里程积分兑换</a></li>
+                    <li role="presentation" class="dropdown">
+                        <a id="drop4" href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                            基础数据<span class="caret"></span>
+                        </a>
+                        <ul id="menu1" class="dropdown-menu" aria-labelledby="drop4">
+                            <li><a href="#">数据源</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">里程积分兑换</a></li>
+                        </ul>
+                    </li>
                     <li><a href="#">运价校验</a></li>
-                    <li><a href="#">批量导入</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
@@ -165,7 +172,7 @@
         <button class="btn btn-default btn-sm">截止</button>
         <div class ="dropdown-oc">
             <div class="btn-group">
-                <button class="btn btn-default btn-sm">批量导入</button>
+                <button class="btn btn-default btn-sm" id="batchImportBtn" for="batchImportFileInput">批量导入</button>
                 <button class="btn btn-default btn-sm dropdown-trigger"><i class="glyphicon glyphicon-triangle-bottom"></i></button>
             </div>
             <ul class ="dropdown-menu-oc">
