--- a/ocmoni6/html/s7Edit.html
+++ b/ocmoni6/html/s7Edit.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <!--导航 start-->
-<div class="navbar-fixed-top">
+<div class="navbar-fixed-top" id ="myheader">
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
